--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p-hero-team</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main class="container">
+        <section class="banner">
+            <div class="banner-left">
+                <div>
+                    <h1 class="banner-title">Programming hero</h1>
+                <p class="banner-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas consectetur, quo ratione natus animi iure deleniti! Mollitia eum eveniet deleniti officiis. Corporis eaque, praesentium unde quia qui sed neque placeat.</p>
+                <button class="love-button">Love P-hero</button>
+                </div>
+            </div>
+            <div class="banner-right">
+                <img src="./images/team.jpg" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
