--- a/index.html
+++ b/index.html
@@ -12,13 +12,82 @@
         <section class="banner">
             <div class="banner-left">
                 <div>
-                    <h1 class="banner-title">Programming hero</h1>
-                <p class="banner-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas consectetur, quo ratione natus animi iure deleniti! Mollitia eum eveniet deleniti officiis. Corporis eaque, praesentium unde quia qui sed neque placeat.</p>
-                <button class="love-button">Love P-hero</button>
+                    <h1 class="banner-title">
+                        Programming hero
+                    </h1>
+                    <p class="banner-text">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, saepe recusandae culpa voluptate
+                        cumque sapiente quas harum atque temporibus facere aspernatur maxime eius magni corporis! Earum
+                        nisi
+                        est voluptatibus nemo?
+                    </p>
+                    <button class="love-button">Love Phero</button>
                 </div>
             </div>
             <div class="banner-right">
-                <img src="./images/team.jpg" alt="">
+                <img src="./img/team.jpg" alt="">
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                <h1>Gallery</h1>
+            </div>
+            <div class="gallery">
+                <div class="photo">
+                    <div class="border left"></div>
+                    <div class="border right"></div>
+                    <div class="border top"></div>
+                    <div class="border bottom"></div>
+                    <img src="./img/jhankar.jpg" alt="">
+                    <div class="photo-content">
+                        <h1>Jhankar Mahbub</h1>
+                        <p>Chief Executive Officer</p>
+                    </div>
+                </div>
+                <div class="photo">
+                    <div class="border left"></div>
+                    <div class="border right"></div>
+                    <div class="border top"></div>
+                    <div class="border bottom"></div>
+                    <img src="./img/jhankar.jpg" alt="">
+                    <div class="photo-content">
+                        <h1>Jhankar Mahbub</h1>
+                        <p>Chief Executive Officer</p>
+                    </div>
+                </div>
+                <div class="photo">
+                    <div class="border left"></div>
+                    <div class="border right"></div>
+                    <div class="border top"></div>
+                    <div class="border bottom"></div>
+                    <img src="./img/rasel.jpg" alt="">
+                    <div class="photo-content">
+                        <h1>Rasel Ahmed</h1>
+                        <p>Product Manager</p>
+                    </div>
+                </div>
+                <div class="photo">
+                    <div class="border left"></div>
+                    <div class="border right"></div>
+                    <div class="border top"></div>
+                    <div class="border bottom"></div>
+                    <img src="./img/reza.png" alt="">
+                    <div class="photo-content">
+                        <h1>Rezaul Karim</h1>
+                        <p>Product Manager</p>
+                    </div>
+                </div>
+                <div class="photo">
+                    <div class="border left"></div>
+                    <div class="border right"></div>
+                    <div class="border top"></div>
+                    <div class="border bottom"></div>
+                    <img src="./img/jhankar.jpg" alt="">
+                    <div class="photo-content">
+                        <h1>Jhankar Mahbub</h1>
+                        <p>Chief Executive Officer</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
